Fix gallery photo stretching bug + fix mobile loading bug

--- a/styles/loading.module.scss
+++ b/styles/loading.module.scss
@@ -2,6 +2,8 @@
 	height: 100%;
 	width: 100%;
 	position: fixed;
+	top: 0;
+	left: 0;
 	background-color: #000000;
 	display: flex;
 	align-items: center;
