--- a/styles/photos-page/photo.module.scss
+++ b/styles/photos-page/photo.module.scss
@@ -1,7 +1,6 @@
 @import '../variables';
 
 .container {
-	min-height: 260px;
 	width: 100%;
 	margin-bottom: 16px;
 	background-color: rgba(0, 0, 0, 0.15);
@@ -23,6 +22,10 @@
 		width: 100%;
 		transition: scale 0.15s ease-out;
 	}
+}
+
+.loading {
+	min-height: 260px;
 }
 
 .titleContainer {
